fix for windows scrollbar causing white border on the right

--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,13 @@
     --main-transition: all 0.3s linear;
 }
 
+
 body {
     color: var(--main-black);
     font-family: 'Lato', sans-serif;
     user-select: none;
+    width: 100vw;
+    overflow: auto;
 }
 
 a {
